add lorem ipsum

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </p>
         <p>Accede al curso en: <a href="https://codigofacilito.com/" target="_blank">Código facilito</a></p>
         <p>Tutora: <a href="https://manuela.dev" target="_blank">Manu Castrillón</a></p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis vero assumenda quis temporibus distinctio aspernatur reprehenderit laboriosam esse voluptatem nemo amet, accusamus sed! Repudiandae iusto eum ut non delectus maxime</p>
       </div>
     </div>
   </body>
