add git resources

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         </p>
         <p>Accede al curso en: <a href="https://codigofacilito.com/" target="_blank">Código facilito</a></p>
         <p>Tutora: <a href="https://manuela.dev" target="_blank">Manu Castrillón</a></p>
+        <a href="https://git-scm.com/doc" target="_blank">En este sitio web puedes encontrar recursos sobre Git</a>
       </div>
     </div>
   </body>
