Add page subtitle

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
           alt="imagen de saludo"
         />
         <h1 class="title">Introducción a GitHub</h1>
+        <h2>Bienvenidos a mi página</h2>
         <p class="text">
           Bienvenidos a este curso de código facilito en el que aprenderás todo
           lo que necesitas para versionar tus proyectos de software haciendo uso
