--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </p>
         <p>Accede al curso en: <a href="https://codigofacilito.com/" target="_blank">Código facilito</a></p>
         <p>Tutora: <a href="https://manuela.dev" target="_blank">Manu Castrillón</a></p>
-        <p>Lorem ipsum</p>
+        <p>Lorem ipsum hola a todxs</p>
       </div>
     </div>
   </body>
